Aggiunto bottone IT EN e cambiamenti minori

--- a/assets/css/index.bundle.css
+++ b/assets/css/index.bundle.css
@@ -75,6 +75,21 @@
     display: none;
 }
 
+#language-button,
+#language-button2 {
+    background: none; 
+    border: none; 
+    color: #FFFFFF; 
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+#language-button:hover,
+#language-button2:hover {
+    color: rgba(255, 255, 255, 0.75);
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
     :root {
         scroll-behavior: smooth;
