--- a/assets/css/index.bundle.css
+++ b/assets/css/index.bundle.css
@@ -93,6 +93,7 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0.7);
     backdrop-filter: blur(30px);
+    -webkit-backdrop-filter: blur(30px);
     z-index: 9999;
 }
 
