--- a/en/services/assets/css/index.bundle.css
+++ b/en/services/assets/css/index.bundle.css
@@ -28,6 +28,10 @@
     --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
 }
 
+body {
+    overflow-x: hidden;
+}
+
 *,
 *::before,
 *::after {
